# MxAccl-fork

./: .gitignore  CMakeLists.txt  CMakeLists_noavx.txt  README.md
debian/: changelog  control  copyright  rules
debian_noavx/: changelog  control  copyright  rules
mx_accl/: CMakeLists.txt  memx-accl.sln  memx-accl.vcxproj  memx-accl.vcxproj.filters
mx_accl/include/memx/accl/: DeviceManager.h  MxAccl.h  MxAcclMT.h  MxModel.h  prepost.h
mx_accl/include/memx/accl/utils/: errors.h  featureMap.h  gbf.h  general.h  mxTypes.h  path.h  sync_queue.hpp  thread_pool.hpp
mx_accl/src/: DeviceManager.cpp  MxAccl.cpp  MxAcclMT.cpp  MxModel.cpp  dfp.cpp  prepost.cpp
mx_accl/src/utils/: featureMap.cpp  mxTypes.cpp  mxpack.cpp  path.cpp
mx_accl/tests/: mxaccl_accuracy_tests.cpp  mxaccl_dataflow_tests.cpp  mxaccl_dfp_tests.cpp  mxaccl_manual_threading_accuracy.cpp  mxaccl_prepost_manual_tests.cpp  mxaccl_prepost_tests.cpp  mxaccl_user_tests.cpp  mxaccl_utility_tests.cpp
tools/: CMakeLists.txt
tools/acclBench/: CMakeLists.txt  acclBench.cpp
