SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR} "*")

FOREACH(subdir ${SUBDIRS})
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt)
    if ("${CMAKE_BUILD_TYPE}" STREQUAL "Packaging")
      if(NOT ${subdir} STREQUAL "acclBench")
        continue()
      endif()
    endif()
    ADD_SUBDIRECTORY(${subdir})
  endif()
ENDFOREACH()
